# cpp_basics

./: README.md
projects/image_processor/: CMakeLists.txt  ImEx.cpp  ImEx.h  blur_filter.cpp  blur_filter.h  bmp.cpp  bmp.h  crop_filter.cpp  crop_filter.h  crop_test.cpp  edge_detection_filter.cpp  edge_detection_filter.h  filter.h  grayscale_filter.cpp  grayscale_filter.h  image.cpp  image.h  main.cpp  matrix_filter.cpp  matrix_filter.h  my_filter.cpp  my_filter.h  negative_filter.cpp  negative_filter.h  rgb.h  sharpening_filter.h  test.cpp  test_blur.cpp  test_edge_detection.cpp  test_grayscale.cpp  test_matrix_filter.cpp  test_negative.cpp  test_sharpening.cpp
tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/cow/: cow_string.cpp  cow_string.h
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/multiplication/: multiplication.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h
tasks/robot/: CMakeLists.txt  checkers_topology.cpp  checkers_topology.h  field.cpp  field.h  knight_topology.cpp  knight_topology.h  overflow_topology.cpp  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.cpp  point.h  robot.cpp  topology.cpp  topology.h  world.cpp  world.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
tasks/vector/: vector.cpp  vector.h
tasks/word2vec/: word2vec.cpp
tasks/zip/: zip.cpp  zip.h
tasks/zip2/: zip.h
